# java-fullstack-games

./: .gitattributes  CMakeLists.txt  README.md  pom.xml
src/main/java/backend/config/: WebConfig.java  WebInitializer.java
src/main/java/backend/racing/: Car.java  CarGenerator.java  GameStatus.java  GameUtils.java  GuiController.java  GuiLauncher.java  Model.java  PressedKey.java  TuiController.java  TuiLauncher.java
src/main/java/backend/server/: ArcadeGamesApp.java  GameController.java  RacingController.java  RacingInitializer.java  SnakeProxyController.java  SnakeServerManager.java
src/main/java/backend/server/dto/: KeyMapper.java  RacingDto.java  RacingMapper.java
src/main/java/backend/snake/: game.cpp  game.h  game_status.cpp  gui_controller.cpp  gui_controller.h  keys.cpp  main.cpp  model.cpp  model.h  pressed_key.cpp  snake.cpp  snake.h  snake_part.cpp  snake_part.h  tui_controller.cpp  tui_controller.h  tui_launcher.cpp  web_controller.cpp  web_controller.h
src/main/java/ui/gui/: GuiRacing.java  gui_snake.cpp  gui_snake.h
src/main/java/ui/tui/: TuiRacing.java  tui_snake.cpp  tui_snake.h
src/main/java/ui/web/static/css/: game-page.css  start-page.css
src/main/java/ui/web/static/js/: actions.js  gameLauncher.js
src/main/java/ui/web/views/: game-page.html  start-page.html
src/test/java/: CarGeneratorTest.java  ModelTests.java
